--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sua Marca - Venda e Compre Online</title>
+    <title>COP30 Shop - Venda e Compre na COP30</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="root.css">
     <style>
         .product-card {
             transition: transform 0.2s;
@@ -24,9 +25,9 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg" style="background-color: var(--color-dark-moss-green);">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sua Marca</a>
+        <a class="navbar-brand" href="#">COP30 Shop</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -54,7 +55,7 @@
 
     <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5 text-center">
-            <h1 class="display-5 fw-bold">Bem-vindo(a) à Sua Marca</h1>
+            <h1 class="display-5 fw-bold">Bem-vindo(a) à COP30 Shop</h1>
             <p class="fs-4">Encontre tudo o que você precisa, de eletrônicos a itens de casa, com os melhores preços!</p>
             <a href="#" class="btn btn-primary btn-lg">Começar a Comprar</a>
         </div>
@@ -65,7 +66,7 @@
         <div class="col-6 col-md-3 mb-3">
             <a href="#" class="d-block text-decoration-none">
                 <div class="card p-3 shadow-sm h-100">
-                    <i class="bi bi-phone-fill fs-2 text-primary"></i>
+                    <i class="bi bi-phone-fill fs-2 text-icon"></i>
                     <p class="mt-2 mb-0">Eletrônicos</p>
                 </div>
             </a>
@@ -73,7 +74,7 @@
         <div class="col-6 col-md-3 mb-3">
             <a href="#" class="d-block text-decoration-none">
                 <div class="card p-3 shadow-sm h-100">
-                    <i class="bi bi-house-fill fs-2 text-primary"></i>
+                    <i class="bi bi-house-fill fs-2 text-icon"></i>
                     <p class="mt-2 mb-0">Casa e Decoração</p>
                 </div>
             </a>
@@ -81,7 +82,7 @@
         <div class="col-6 col-md-3 mb-3">
             <a href="#" class="d-block text-decoration-none">
                 <div class="card p-3 shadow-sm h-100">
-                    <i class="bi bi-car-front-fill fs-2 text-primary"></i>
+                    <i class="bi bi-car-front-fill fs-2 text-icon"></i>
                     <p class="mt-2 mb-0">Veículos</p>
                 </div>
             </a>
@@ -89,7 +90,7 @@
         <div class="col-6 col-md-3 mb-3">
             <a href="#" class="d-block text-decoration-none">
                 <div class="card p-3 shadow-sm h-100">
-                    <i class="bi bi-controller fs-2 text-primary"></i>
+                    <i class="bi bi-controller fs-2 text-icon"></i>
                     <p class="mt-2 mb-0">Games</p>
                 </div>
             </a>
@@ -141,8 +142,8 @@
     </div>
 </main>
 
-<footer class="bg-dark text-white mt-5 p-4 text-center">
-    <p>&copy; 2025 Sua Marca. Todos os direitos reservados.</p>
+<footer style="background-color: var(--color-pakistan-green); color: var(--color-consilk);" class="mt-5 p-4 text-center">
+    <p>&copy; 2025 COP30 Shop. Todos os direitos reservados.</p>
     <p>
         <a href="#" class="text-white mx-2">Sobre Nós</a> | 
         <a href="#" class="text-white mx-2">Termos de Uso</a> | 
