--- a/shop/shop.html
+++ b/shop/shop.html
@@ -6,11 +6,17 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    
+    <!-- CSS -->
+    <link rel="stylesheet" href="../root.css">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Script -->
     <script src="data.js"></script>
     <script src="code.js"></script>
 </head>
-<body>
-    <button onclick="read()" type="button">testar</button>
+<body onload="onReady()">
+    <button onclick="createItem()" type="button">testar</button>
+    <div id="list"></div>
 </body>
 </html>
