--- a/index.html
+++ b/index.html
@@ -25,31 +25,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg" style="background-color: var(--color-dark-moss-green);">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">COP30 Shop</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <form class="d-flex mx-auto" role="search" style="width: 70%;">
-                <input class="form-control me-2" type="search" placeholder="Buscar produtos, categorias..." aria-label="Search">
-                <button class="btn btn-outline-primary" type="submit"><i class="bi bi-search"></i></button>
-            </form>
-            <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> Minha Conta</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-cart"></i> Carrinho</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-box-arrow-in-right"></i> Entrar</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<object data="util/Nav.html" type="text/html" width="100%" height="64px"></object>
 
 <main class="container mt-4">
 
