--- a/shop/shop.html
+++ b/shop/shop.html
@@ -4,57 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cop30 Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="../root.css">
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="../util/Nav.css">
+    <link rel="stylesheet" href="../util/Footer.css">
 
     <!-- Script -->
     <script src="data.js"></script>
     <script src="script.js"></script>
+    <script src="../util/Nav.js"></script>
+    <script src="../util/Footer.js"></script>
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: var(--color-dark-moss-green);">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">COP30 Shop</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0 w-100">
-                    <li class="nav-item ms-auto">
-                        <a class="nav-link" href="#"><i class="bi bi-box-arrow-in-right"></i> Entrar</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <app-navbar></app-navbar>
 
+    <app-list class="d-flex flex-wrap gap-3"></app-list>
 
-
-
-    <app-list class="d-flex flex-wrap gap-3" />
-
-    <footer style="background-color: var(--color-pakistan-green); color: var(--color-consilk);"
-        class="mt-5 p-4 text-center container-fluid">
-        <p>&copy; 2025 COP30 Shop. Todos os direitos reservados.</p>
-        <p>
-            <a href="#" class="text-white mx-2">Sobre Nós</a> |
-            <a href="#" class="text-white mx-2">Termos de Uso</a> |
-            <a href="#" class="text-white mx-2">Contato</a>
-        </p>
-    </footer>
+    <app-footer></app-footer>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 
 </html>
