--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COP30 Shop - Venda e Compre na COP30</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="root.css">
+    <link rel="stylesheet" href="util/Nav.css">
+    <link rel="stylesheet" href="util/Footer.css">
+
+    <script src="util/Nav.js"></script>
+    <script src="util/Footer.js"></script>
+
     <style>
         .product-card {
             transition: transform 0.2s;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
         .product-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
+
         .jumbotron {
             background-color: #f8f9fa;
             padding: 2rem 1rem;
@@ -23,111 +33,109 @@
         }
     </style>
 </head>
+
 <body>
 
-<object data="util/Nav.html" type="text/html" width="100%" height="64px"></object>
+    <app-navbar index="#" shop="shop/shop.html"></app-navbar>
 
-<main class="container mt-4">
+    <main class="container mt-4">
 
-    <div class="p-5 mb-4 bg-light rounded-3">
-        <div class="container-fluid py-5 text-center">
-            <h1 class="display-5 fw-bold">Bem-vindo(a) à COP30 Shop</h1>
-            <p class="fs-4">Encontre tudo o que você precisa, de eletrônicos a itens de casa, com os melhores preços!</p>
-            <a href="#" class="btn btn-primary btn-lg">Começar a Comprar</a>
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5 text-center">
+                <h1 class="display-5 fw-bold">Bem-vindo(a) à COP30 Shop</h1>
+                <p class="fs-4">Encontre tudo o que você precisa, de eletrônicos a itens de casa, com os melhores
+                    preços!</p>
+                <a href="#" class="btn btn-primary btn-lg">Começar a Comprar</a>
+            </div>
         </div>
-    </div>
 
-    <h2 class="mt-5 mb-3">Categorias Populares</h2>
-    <div class="row text-center mb-5">
-        <div class="col-6 col-md-3 mb-3">
-            <a href="#" class="d-block text-decoration-none">
-                <div class="card p-3 shadow-sm h-100">
-                    <i class="bi bi-phone-fill fs-2 text-icon"></i>
-                    <p class="mt-2 mb-0">Eletrônicos</p>
-                </div>
-            </a>
+        <h2 class="mt-5 mb-3">Categorias Populares</h2>
+        <div class="row text-center mb-5">
+            <div class="col-6 col-md-3 mb-3">
+                <a href="#" class="d-block text-decoration-none">
+                    <div class="card p-3 shadow-sm h-100">
+                        <i class="bi bi-phone-fill fs-2 text-icon"></i>
+                        <p class="mt-2 mb-0">Eletrônicos</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 col-md-3 mb-3">
+                <a href="#" class="d-block text-decoration-none">
+                    <div class="card p-3 shadow-sm h-100">
+                        <i class="bi bi-house-fill fs-2 text-icon"></i>
+                        <p class="mt-2 mb-0">Casa e Decoração</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 col-md-3 mb-3">
+                <a href="#" class="d-block text-decoration-none">
+                    <div class="card p-3 shadow-sm h-100">
+                        <i class="bi bi-car-front-fill fs-2 text-icon"></i>
+                        <p class="mt-2 mb-0">Veículos</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 col-md-3 mb-3">
+                <a href="#" class="d-block text-decoration-none">
+                    <div class="card p-3 shadow-sm h-100">
+                        <i class="bi bi-controller fs-2 text-icon"></i>
+                        <p class="mt-2 mb-0">Games</p>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="col-6 col-md-3 mb-3">
-            <a href="#" class="d-block text-decoration-none">
-                <div class="card p-3 shadow-sm h-100">
-                    <i class="bi bi-house-fill fs-2 text-icon"></i>
-                    <p class="mt-2 mb-0">Casa e Decoração</p>
-                </div>
-            </a>
-        </div>
-        <div class="col-6 col-md-3 mb-3">
-            <a href="#" class="d-block text-decoration-none">
-                <div class="card p-3 shadow-sm h-100">
-                    <i class="bi bi-car-front-fill fs-2 text-icon"></i>
-                    <p class="mt-2 mb-0">Veículos</p>
-                </div>
-            </a>
-        </div>
-        <div class="col-6 col-md-3 mb-3">
-            <a href="#" class="d-block text-decoration-none">
-                <div class="card p-3 shadow-sm h-100">
-                    <i class="bi bi-controller fs-2 text-icon"></i>
-                    <p class="mt-2 mb-0">Games</p>
-                </div>
-            </a>
-        </div>
-    </div>
 
-    <h2 class="mt-5 mb-3">Produtos em Destaque</h2>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
-        <div class="col">
-            <div class="card product-card h-100">
-                <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Nome do Produto 1">
-                <div class="card-body">
-                    <h5 class="card-title">Nome do Produto 1</h5>
-                    <p class="card-text text-success fw-bold">R$ 1.250,00</p>
-                    <a href="#" class="btn btn-primary w-100">Comprar</a>
+        <h2 class="mt-5 mb-3">Produtos em Destaque</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
+            <div class="col">
+                <div class="card product-card h-100">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Nome do Produto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Nome do Produto 1</h5>
+                        <p class="card-text text-success fw-bold">R$ 1.250,00</p>
+                        <a href="#" class="btn btn-primary w-100">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card product-card h-100">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Nome do Produto 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Nome do Produto 2</h5>
+                        <p class="card-text text-success fw-bold">R$ 45,90</p>
+                        <a href="#" class="btn btn-primary w-100">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card product-card h-100">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Nome do Produto 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Nome do Produto 3</h5>
+                        <p class="card-text text-success fw-bold">R$ 250,50</p>
+                        <a href="#" class="btn btn-primary w-100">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card product-card h-100">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Nome do Produto 4">
+                    <div class="card-body">
+                        <h5 class="card-title">Nome do Produto 4</h5>
+                        <p class="card-text text-success fw-bold">R$ 79,99</p>
+                        <a href="#" class="btn btn-primary w-100">Comprar</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="card product-card h-100">
-                <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Nome do Produto 2">
-                <div class="card-body">
-                    <h5 class="card-title">Nome do Produto 2</h5>
-                    <p class="card-text text-success fw-bold">R$ 45,90</p>
-                    <a href="#" class="btn btn-primary w-100">Comprar</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card product-card h-100">
-                <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Nome do Produto 3">
-                <div class="card-body">
-                    <h5 class="card-title">Nome do Produto 3</h5>
-                    <p class="card-text text-success fw-bold">R$ 250,50</p>
-                    <a href="#" class="btn btn-primary w-100">Comprar</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card product-card h-100">
-                <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Nome do Produto 4">
-                <div class="card-body">
-                    <h5 class="card-title">Nome do Produto 4</h5>
-                    <p class="card-text text-success fw-bold">R$ 79,99</p>
-                    <a href="#" class="btn btn-primary w-100">Comprar</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
+    </main>
 
-<footer style="background-color: var(--color-pakistan-green); color: var(--color-consilk);" class="mt-5 p-4 text-center">
-    <p>&copy; 2025 COP30 Shop. Todos os direitos reservados.</p>
-    <p>
-        <a href="#" class="text-white mx-2">Sobre Nós</a> | 
-        <a href="#" class="text-white mx-2">Termos de Uso</a> | 
-        <a href="#" class="text-white mx-2">Contato</a>
-    </p>
-</footer>
+    <app-footer></app-footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
