finalizando pagina de vendas

--- a/shop/shop.html
+++ b/shop/shop.html
@@ -22,7 +22,7 @@
     <script src="../util/Footer.js"></script>
 </head>
 <body>
-    <app-navbar></app-navbar>
+    <app-navbar index="../index.html" shop="#"></app-navbar>
 
     <app-list class="d-flex flex-wrap gap-3"></app-list>
 
