--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="root.css">
-    <link rel="stylesheet" href="util/Nav.css">
     <link rel="stylesheet" href="util/Footer.css">
+    <link rel="stylesheet" href="/util/header/header.css">
 
-    <script src="util/Nav.js"></script>
     <script src="util/Footer.js"></script>
 
     <style>
@@ -35,8 +34,25 @@
 </head>
 
 <body>
-
-    <app-navbar index="#" shop="shop/shop.html"></app-navbar>
+    <div style="height: 80px;"></div>
+    <header id="mainHeader" class="app-header text-white show fixed-top py-2">
+        <nav class="navbar navbar-expand-lg navbar-dark container">
+            <a class="navbar-brand" href="/index.html">COP30 Shop</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon text-white"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link btn app-btn-primary" href="/shop/shop.html">Loja</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn app-btn-primary" href="/helper/help.html">Sobre</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     <main class="container mt-4">
 
@@ -137,5 +153,6 @@
         crossorigin="anonymous"></script>
 
 </body>
+<script src="/util/header/header.js"></script>
 
 </html>
