--- a/helper/help.html
+++ b/helper/help.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/icon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/icon.ico">
 
-    <title>COP30 Shop</title>
+    <title>Cop30 Sobre</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
