--- a/helper/help.html
+++ b/helper/help.html
@@ -13,9 +13,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" href="../util/Footer.css">
-    <link rel="stylesheet" href="../util/Nav.css">
-    <link rel="stylesheet" href="../root.css">
+    <link rel="stylesheet" href="/util/Footer.css">
+    <link rel="stylesheet" href="/util/Nav.css">
+    <link rel="stylesheet" href="/root.css">
     <link rel="stylesheet" href="/util/Animation.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/util/header/header.css">
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <div style="height: 16px;"></div>
+    <div style="height: 32px;"></div>
     <header id="mainHeader" class="app-header text-white show fixed-top py-2">
         <nav class="navbar navbar-expand-lg navbar-dark container">
             <a class="navbar-brand" href="/index.html">COP30 Shop</a>
