--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                     </div>
                 </div>
             </div>
+
+        <p id="sobre" class="lead text-center mb-5">
+            O COP30 Shop é uma loja virtual dedicada à valorização da cultura amazônica e à sustentabilidade. Aqui você encontra produtos artesanais, itens típicos da região, opções de turismo e gastronomia, tudo pensado para destacar o melhor da Amazônia. Navegue pelas categorias, conheça os destaques e apoie o movimento COP30, levando tradição e inovação para o mundo!
+        </p>
             
         <h2 class="mt-5 mb-3">Categorias Populares</h2>
         <div class="row text-center mb-5">
