corrigindo links pro GH-Pages

--- a/helper/help.html
+++ b/helper/help.html
@@ -13,12 +13,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" href="/util/Footer.css">
-    <link rel="stylesheet" href="/util/Nav.css">
-    <link rel="stylesheet" href="/root.css">
-    <link rel="stylesheet" href="/util/Animation.css">
+    <link rel="stylesheet" href="../util/Footer.css">
+    <link rel="stylesheet" href="../util/Nav.css">
+    <link rel="stylesheet" href="../root.css">
+    <link rel="stylesheet" href="../util/Animation.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/util/header/header.css">
+    <link rel="stylesheet" href="../util/header/header.css">
 
     <script src="../util/Footer.js"></script>
 </head>
@@ -27,17 +27,17 @@
     <div style="height: 32px;"></div>
     <header id="mainHeader" class="app-header text-white show fixed-top py-2">
         <nav class="navbar navbar-expand-lg navbar-dark container">
-            <a class="navbar-brand" href="/index.html">COP30 Shop</a>
+            <a class="navbar-brand" href="../index.html">COP30 Shop</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon text-white"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link btn app-btn-primary" href="/shop/shop.html">Loja</a>
+                        <a class="nav-link btn app-btn-primary" href="../shop/shop.html">Loja</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn app-btn-primary" href="/helper/help.html">Sobre</a>
+                        <a class="nav-link btn app-btn-primary" href="#">Sobre</a>
                     </li>
                 </ul>
             </div>
@@ -577,6 +577,6 @@
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
 <script src="help.js"></script>
-<script src="/util/header/header.js"></script>
+<script src="../util/header/header.js"></script>
 
 </html>
