--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="icon" type="image/x-icon" href="/icon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="/icon.ico">
+    <link rel="icon" type="image/x-icon" href="icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="icon.ico">
     
     <title>Cop30 Shop</title>
 
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="root.css">
     <link rel="stylesheet" href="util/Footer.css">
-    <link rel="stylesheet" href="/util/header/header.css">
+    <link rel="stylesheet" href="util/header/header.css">
     <link rel="stylesheet" href="style.css">
 
     <script src="util/Footer.js"></script>
@@ -25,17 +25,17 @@
     <div style="height: 80px;"></div>
     <header id="mainHeader" class="app-header text-white show fixed-top py-2">
         <nav class="navbar navbar-expand-lg navbar-dark container">
-            <a class="navbar-brand" href="/index.html">COP30 Shop</a>
+            <a class="navbar-brand" href="#">COP30 Shop</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon text-white"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link btn app-btn-primary" href="/shop/shop.html">Loja</a>
+                        <a class="nav-link btn app-btn-primary" href="shop/shop.html">Loja</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn app-btn-primary" href="/helper/help.html">Sobre</a>
+                        <a class="nav-link btn app-btn-primary" href="helper/help.html">Sobre</a>
                     </li>
                 </ul>
             </div>
@@ -129,6 +129,6 @@
         crossorigin="anonymous"></script>
 
 </body>
-<script src="/util/header/header.js"></script>
+<script src="util/header/header.js"></script>
 
 </html>
