--- a/shop/shop.html
+++ b/shop/shop.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="icon" type="image/x-icon" href="/icon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="/icon.ico">
+    <link rel="icon" type="image/x-icon" href="../icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../icon.ico">
 
     <title>Cop30 - Loja</title>
 
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../root.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../util/Footer.css">
-    <link rel="stylesheet" href="/util/header/header.css">
+    <link rel="stylesheet" href="../util/header/header.css">
 
     <!-- Script -->
     <script src="../util/Footer.js"></script>
@@ -28,17 +28,17 @@
     <div style="height: 80px;"></div>
     <header id="mainHeader" class="app-header text-white show fixed-top py-2">
         <nav class="navbar navbar-expand-lg navbar-dark container">
-            <a class="navbar-brand" href="/index.html">COP30 Shop</a>
+            <a class="navbar-brand" href="../index.html">COP30 Shop</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon text-white"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link btn app-btn-primary" href="/shop/shop.html">Loja</a>
+                        <a class="nav-link btn app-btn-primary" href="#">Loja</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn app-btn-primary" href="/helper/help.html">Sobre</a>
+                        <a class="nav-link btn app-btn-primary" href="../helper/help.html">Sobre</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +69,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
-<script src="/util/header/header.js"></script>
+<script src="../util/header/header.js"></script>
 
 
 </html>
