Corrigindo caminho das imagens

--- a/helper/help.html
+++ b/helper/help.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/x-icon" href="/icon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="/icon.ico">
+    <link rel="icon" type="image/x-icon" href="../icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../icon.ico">
 
     <title>Cop30 Sobre</title>
 
@@ -69,7 +69,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center mb-5">
                             <div class="col-md-6">
-                                <img src="/assets/cidade/mercado-belem.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/cidade/mercado-belem.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -85,7 +85,7 @@
 
                         <!-- 2. Imagem desfocada ao fundo com texto -->
                         <section class="image-background">
-                            <img src="/assets/cidade/praca-do-relogio.jpg" alt="Imagem de fundo">
+                            <img src="../assets/cidade/praca-do-relogio.jpg" alt="Imagem de fundo">
                             <div class="content text-center">
                                 <p class="fs-5">
                                     A cidadela edificada a partir de uma praça de armas, com os prédios da igreja e da
@@ -102,7 +102,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center mb-5">
                             <div class="col-md-6">
-                                <img src="/assets/cidade/basilica-nossa-senhora-nazare.jpg" class="img-fluid"
+                                <img src="../assets/cidade/basilica-nossa-senhora-nazare.jpg" class="img-fluid"
                                     alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
@@ -120,7 +120,7 @@
                         <!-- 3. Texto com imagem ao lado (inverso da primeira) -->
                         <section class="row align-items-center app-reverse mb-5">
                             <div class="col-md-6 order-md-2">
-                                <img src="/assets/cidade/milton-kanashiro.jpg" class="img-fluid" alt="Imagem 3">
+                                <img src="../assets/cidade/milton-kanashiro.jpg" class="img-fluid" alt="Imagem 3">
                             </div>
                             <div class="col-md-6 order-md-1">
                                 <p class="fs-5">
@@ -138,7 +138,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center mb-5">
                             <div class="col-md-6">
-                                <img src="/assets/cidade/porto-de-belem-jose_paulo_lacerda.jpg" class="img-fluid"
+                                <img src="../assets/cidade/porto-de-belem-jose_paulo_lacerda.jpg" class="img-fluid"
                                     alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
@@ -156,7 +156,7 @@
 
                         <!-- 2. Imagem desfocada ao fundo com texto -->
                         <section class="image-background">
-                            <img src="/assets/cidade/casa-rua-tomazia-belem-jorge.jpg" alt="Imagem de fundo">
+                            <img src="../assets/cidade/casa-rua-tomazia-belem-jorge.jpg" alt="Imagem de fundo">
                             <div class="content text-center">
                                 <p class="fs-5">
                                     A área urbana se manteria estabilizada até a segunda metade do século XVIII, quando
@@ -178,7 +178,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center mb-5">
                             <div class="col-md-6">
-                                <img src="/assets/artesanato/biojoias.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/artesanato/biojoias.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -199,7 +199,7 @@
 
                         <!-- 2. Imagem desfocada ao fundo com texto -->
                         <section class="image-background">
-                            <img src="/assets/artesanato/miriti.jpg" alt="Imagem de fundo">
+                            <img src="../assets/artesanato/miriti.jpg" alt="Imagem de fundo">
                             <div class="content text-center">
                                 <p class="fs-5">
                                     O miriti, também conhecido como buriti em outras regiões, é uma palmeira abundante
@@ -226,7 +226,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center mb-5">
                             <div class="col-md-6">
-                                <img src="/assets/artesanato/cestas.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/artesanato/cestas.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -262,7 +262,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center app-reverse mb-5">
                             <div class="col-md-6 order-md-2">
-                                <img src="/assets/artesanato/marajoara.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/artesanato/marajoara.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -301,7 +301,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center mb-5">
                             <div class="col-md-6">
-                                <img src="/assets/comida/açai.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/comida/açai.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -322,7 +322,7 @@
 
                         <!-- 2. Imagem desfocada ao fundo com texto -->
                         <section class="image-background">
-                            <img src="/assets/comida/pato-no-tucupi.jpg" alt="Imagem de fundo">
+                            <img src="../assets/comida/pato-no-tucupi.jpg" alt="Imagem de fundo">
                             <div class="content text-center">
                                 <p class="fs-5">
                                     A origem do Pato no Tucupi está ligada às práticas alimentares dos povos indígenas,
@@ -346,7 +346,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center mb-5">
                             <div class="col-md-6">
-                                <img src="/assets/comida/manicoba.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/comida/manicoba.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -378,7 +378,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center app-reverse mb-5">
                             <div class="col-md-6 order-md-2">
-                                <img src="/assets/artesanato/marajoara.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/artesanato/marajoara.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -418,7 +418,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center mb-5">
                             <div class="col-md-6">
-                                <img src="/assets/turismo/bosque-rodrigues-alves.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/turismo/bosque-rodrigues-alves.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -449,7 +449,7 @@
 
                         <!-- 2. Imagem desfocada ao fundo com texto -->
                         <section class="image-background">
-                            <img src="/assets/turismo/mangal-das-garças.jpg" alt="Imagem de fundo">
+                            <img src="../assets/turismo/mangal-das-garças.jpg" alt="Imagem de fundo">
                             <div class="content text-center">
                                 <p class="fs-5">
                                     O Mangal das Garças foi inaugurado em 2005. O espaço foi construído pelo Governo do
@@ -470,7 +470,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center mb-5">
                             <div class="col-md-6">
-                                <img src="/assets/turismo/docas.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/turismo/docas.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -499,7 +499,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center app-reverse mb-5">
                             <div class="col-md-6 order-md-2">
-                                <img src="/assets/turismo/parque-da-cidade.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/turismo/parque-da-cidade.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
@@ -542,7 +542,7 @@
                         <!-- 1. Imagem com texto ao lado -->
                         <section class="row align-items-center app-reverse mb-5">
                             <div class="col-md-6 order-md-2">
-                                <img src="/assets/turismo/Ver-o-peso.jpg" class="img-fluid" alt="Imagem 1">
+                                <img src="../assets/turismo/Ver-o-peso.jpg" class="img-fluid" alt="Imagem 1">
                             </div>
                             <div class="col-md-6">
                                 <p class="fs-5">
