--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
                 <div id="carouselBg" class="carousel slide h-100 carrossel-container" data-bs-ride="carousel" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1;">
                     <div class="carousel-inner h-100">
                         <div class="carousel-item active h-100">
-                            <img src="/assets/artesanato/marajoara.jpg" class="d-block w-100 h-100" alt="Marajoara" style="object-fit: cover; filter: brightness(0.6);" id="carrossel-img">
+                            <img src="assets/artesanato/marajoara.jpg" class="d-block w-100 h-100" alt="Marajoara" style="object-fit: cover; filter: brightness(0.6);" id="carrossel-img">
                         </div>
                         <div class="carousel-item h-100">
-                            <img src="/assets/comida/açai.jpg" class="d-block w-100 h-100" alt="Açai" style="object-fit: cover; filter: brightness(0.6);" id="carrossel-img">
+                            <img src="assets/comida/açai.jpg" class="d-block w-100 h-100" alt="Açai" style="object-fit: cover; filter: brightness(0.6);" id="carrossel-img">
                         </div>
                         <div class="carousel-item h-100">
-                            <img src="/assets/turismo/parque-da-cidade.jpg" class="d-block w-100 h-100" alt="parque da Cidade" style="object-fit: cover; filter: brightness(0.6);" id="carrossel-img">
+                            <img src="assets/turismo/parque-da-cidade.jpg" class="d-block w-100 h-100" alt="parque da Cidade" style="object-fit: cover; filter: brightness(0.6);" id="carrossel-img">
                         </div>
                         <div class="carousel-item h-100">
-                            <img src="/assets/turismo/docas.jpg" class="d-block w-100 h-100" alt="Docas" style="object-fit: cover; filter: brightness(0.6);" id="carrossel-img">
+                            <img src="assets/turismo/docas.jpg" class="d-block w-100 h-100" alt="Docas" style="object-fit: cover; filter: brightness(0.6);" id="carrossel-img">
                         </div>
                     </div>
                 </div>
