--- a/index.html
+++ b/index.html
@@ -64,9 +64,15 @@
                 <div class="p-5 position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center" style="z-index: 2; background: rgba(255,255,255,0.3);">
                     <div class="container-fluid py-5 text-center">
                         <div id="carrossel-bloco">
-                            <h1 id="carrossel-titulo" class="display-5 fw-bold">COP30: Artes da Amazônia para o Mundo</h1>
-                            <p id="carrossel-subtitulo" class="fs-4">Bem-vindo à COP30 Shop! Aqui você encontra produtos exclusivos, feitos por artesãos da Amazônia, celebrando a cultura e a sustentabilidade. Participe do movimento COP30 e leve o melhor da nossa região para o mundo!</p>
-                            <a href="#" class="btn btn-primary btn-lg">Começar a Comprar</a>
+                            <h1 id="carrossel-titulo">
+                                COP30: Artes da Amazônia para o Mundo
+                            </h1>
+                            <p id="carrossel-subtitulo">
+                                Bem-vindo à COP30 Shop! Aqui você encontra produtos exclusivos, feitos por artesãos da Amazônia, celebrando a cultura e a sustentabilidade. Participe do movimento COP30 e leve o melhor da nossa região para o mundo!
+                            </p>
+                            <a href="#" id="carrossel-btn">
+                                Começar a Comprar
+                            </a>
                         </div>
                     </div>
                 </div>
