Ajustando redirecionamento do botão de compra

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <p id="carrossel-subtitulo">
                                 Bem-vindo à COP30 Shop! Aqui você encontra produtos exclusivos, feitos por artesãos da Amazônia, celebrando a cultura e a sustentabilidade. Participe do movimento COP30 e leve o melhor da nossa região para o mundo!
                             </p>
-                            <a href="#" id="carrossel-btn">
+                            <a href="shop/shop.html" id="carrossel-btn">
                                 Começar a Comprar
                             </a>
                         </div>
